# warehouse_management

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
domain/: models.py  repositories.py  services.py
infrastructure/: database.py  orm.py  repositories.py  unit_of_work.py
tests/test_domain/: test_services.py
tests/test_infrastructure/: test_orm.py  tests.py
